--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,6 @@
 body{
   border: 1px red solid;
   font-family: 'Roboto', sans-serif;
-  padding: 0 1em;
   width: 100%;
+  background-color: lightgray;
 }
