--- a/src/components/navBar.css
+++ b/src/components/navBar.css
@@ -31,6 +31,7 @@
   color: #fff;
   font-size: 1.3rem;
   text-transform: uppercase;
+  cursor: pointer;
   transition: all 1s ease-in-out;
 }
 .option:hover{
