--- a/src/components/previewCollection.css
+++ b/src/components/previewCollection.css
@@ -24,6 +24,7 @@
   width: 100%;
   max-width: 20em;
   height: 100%;
+  position: relative;
 }
 .background {
   border: 1px red solid;
@@ -32,6 +33,10 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  transition: all 1s ease-in-out;
+}
+.items:hover .background{
+  opacity: 0.7;
 }
 .info {
   width: 100%;
@@ -39,6 +44,16 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+.addto-cart{
+  position: absolute;
+  bottom: 3em;
+  width: 100%;
+  transform: scale(0);
+  transition: all 1s ease-in-out;
+}
+.items:hover .addto-cart{
+  transform: scale(1);
 }
 
 @media screen and (max-width: 1000px) {
