--- a/src/components/dropDown.css
+++ b/src/components/dropDown.css
@@ -25,3 +25,8 @@
   justify-content: flex-start;
   overflow-y: scroll;
 }
+.container{
+  border: 1px red solid;
+  width: 100%;
+  height: 10em;
+}
