--- a/src/components/previewCollection.css
+++ b/src/components/previewCollection.css
@@ -1,14 +1,46 @@
 .preview-wrapper {
   border: 1px red solid;
   width: 100%;
+  max-width: 20em;
+  height: 25em;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  gap: 1em;
+  gap: 0.2em;
   margin-bottom: 3em;
+  position: relative;
 }
-.item-box {
+.background{
+  border: 1px red solid;
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  transition: all 1s ease-in-out;
+}
+.preview-wrapper:hover .background{
+  opacity: 0.7;
+}
+.info{
+  border: 1px red solid;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.cart{
+  width: 100%;
+  position: absolute;
+  bottom: 2em;
+  transform: scale(0);
+  transition: all 1s ease-in-out;
+}
+.preview-wrapper:hover .cart{
+  transform: scale(1);
+}
+/* .item-box {
   border: 1px red solid;
   width: 100%;
   height: 25em;
@@ -54,7 +86,7 @@
 }
 .items:hover .addto-cart{
   transform: scale(1);
-}
+} */
 
 @media screen and (max-width: 1000px) {
   .item-box{
