--- a/src/components/dropDown.css
+++ b/src/components/dropDown.css
@@ -1,7 +1,7 @@
-.cartItem-wrapper{
+.dropdown-wrapper{
   border: 1px black solid;
   width: 100%;
-  max-width: 19em;
+  max-width: 18em;
   height: 25em;
   background-color: #fff;
   padding: 0.5em;
@@ -15,18 +15,20 @@
   justify-content: space-between;
   gap: 1em;
 }
-.cart-content{
+.cartContent{
   border: 1px black solid;
   width: 100%;
-  height: 100%;
+  height: 19em;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  gap: 1em;
   overflow-y: scroll;
 }
 .container{
   border: 1px red solid;
   width: 100%;
   height: 10em;
+  background-color: black;
 }
