--- a/src/components/previewCollection.css
+++ b/src/components/previewCollection.css
@@ -40,64 +40,16 @@
 .preview-wrapper:hover .cart{
   transform: scale(1);
 }
-/* .item-box {
-  border: 1px red solid;
-  width: 100%;
-  height: 25em;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.items {
-  border: 1px red solid;
-  display: flex;
-  flex-direction: column;
-  gap: 0.2em;
-  width: 100%;
-  max-width: 20em;
-  height: 100%;
-  position: relative;
-}
-.background {
-  border: 1px red solid;
-  width: 100%;
-  height: 100%;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  transition: all 1s ease-in-out;
-}
-.items:hover .background{
-  opacity: 0.7;
-}
-.info {
-  width: 100%;
-  border: 1px red solid;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.addto-cart{
-  position: absolute;
-  bottom: 3em;
-  width: 100%;
-  transform: scale(0);
-  transition: all 1s ease-in-out;
-}
-.items:hover .addto-cart{
-  transform: scale(1);
-} */
 
 @media screen and (max-width: 1000px) {
-  .item-box{
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
+  .preview-wrapper{
     max-width: 100%;
-    height: 100em;
-    gap: 1.5em;
+    height: 40em;
   }
-  .items{
+}
+@media screen and (max-width: 500px) {
+  .preview-wrapper{
     max-width: 100%;
+    height: 25em;
   }
 }
