--- a/src/components/shopCollection.css
+++ b/src/components/shopCollection.css
@@ -15,3 +15,9 @@
   align-items: center;
   justify-content: space-between;
 }
+
+@media screen and (max-width:1000px) {
+  .preview{
+    flex-direction: column;
+  }
+}
