--- a/src/components/checkout.css
+++ b/src/components/checkout.css
@@ -36,3 +36,10 @@
   font-weight: bold;
   font-size: 1.2rem;
 }
+
+@media screen and (max-width: 1000px) {
+  .checkout-header{
+    display: none;
+    max-width: 100%;
+  }
+}
