--- a/src/components/checkout.css
+++ b/src/components/checkout.css
@@ -40,6 +40,23 @@
   font-weight: bold;
   font-size: 1.2rem;
 }
+button{
+  border: none;
+  color: #fff;
+  margin-left: auto;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  font-size: 1.3rem;
+  padding: 0.8em 1em;
+  background-color: black;
+  cursor: pointer;
+  transition: all 0.3s ease-in;
+}
+button:hover{
+  color: black;
+  border: 1px black solid;
+  background-color: #fff;
+}
 
 @media screen and (max-width: 1000px) {
   .checkout-header{
