--- a/src/components/homeItems.css
+++ b/src/components/homeItems.css
@@ -1,5 +1,4 @@
 .homeItem-wrapper{
-  border: 1px red solid;
   min-width: 25em;
   height: 15em;
   display: flex;
@@ -37,8 +36,12 @@
   opacity: 0.7;
   position: absolute;
 }
+.content h1{
+  color: rgb(27, 27, 50);
+}
 .content p{
   font-size: 1.5rem;
+  color: rgb(27, 27, 50);
 }
 
 @media screen and (max-width: 500px) {
