--- a/src/components/mobileNav.css
+++ b/src/components/mobileNav.css
@@ -43,9 +43,11 @@
 }
 .mobile-link-wrapper a{
   color: #fff;
+  text-transform: capitalize;
+  font-size: 1.2rem;
 }
 .mobile-show{
-  min-height: 12em;
+  min-height: 14em;
   transition: all 2s ease-in-out;
 }
 @media screen and (max-width: 600px) {
