--- a/src/components/checkout.css
+++ b/src/components/checkout.css
@@ -37,6 +37,14 @@
   font-weight: bold;
   font-size: 1.2rem;
 }
+.pay-btn{
+  width: 100%;
+  padding: 0 2em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 button{
   border: none;
   color: #fff;
@@ -44,7 +52,7 @@ button{
   margin-bottom: 1em;
   font-size: 1.3rem;
   padding: 0.8em 1em;
-  background-color: black;
+  background-color: rgb(27, 27, 50);
   cursor: pointer;
   transition: all 0.3s ease-in;
 }
