--- a/src/components/previewCollection.css
+++ b/src/components/previewCollection.css
@@ -43,6 +43,9 @@
     max-width: 100%;
     height: 40em;
   }
+  .cart{
+    transform: scale(1);
+  }
 }
 @media screen and (max-width: 500px) {
   .preview-wrapper{
