--- a/src/components/mobileNav.css
+++ b/src/components/mobileNav.css
@@ -46,6 +46,11 @@
   text-transform: capitalize;
   font-size: 1.2rem;
 }
+.mobile-link-wrapper div{
+  color: #fff;
+  text-transform: capitalize;
+  font-size: 1.2rem;
+}
 .mobile-show{
   min-height: 14em;
   transition: all 2s ease-in-out;
