--- a/src/components/mobileNav.css
+++ b/src/components/mobileNav.css
@@ -17,6 +17,13 @@
 .nav-icon{
   font-size: 3rem;
 }
+.toggle-icon-box{
+  width: 100%;
+  max-width: 7em;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 .toggle-icon{
   transition: all 5s ease-in-out;
 }
@@ -35,26 +42,31 @@
   align-items: center;
   gap: 1em;
   position: absolute;
+  top: 10%;
   left: 0;
   right: 0;
+  bottom: 0;
   z-index: 1;
-  height: 0;
-  transition: all 2s ease-in-out;
+  transform: translateY(-100%);
+  transition: all 1s ease-in-out;
+}
+.mobile-show{
+  transform: translateX(0);
+  transition: all 1s ease-in-out;
 }
 .mobile-link-wrapper a{
   color: #fff;
   text-transform: capitalize;
   font-size: 1.2rem;
+  margin: 1em 0;
 }
 .mobile-link-wrapper div{
   color: #fff;
   text-transform: capitalize;
   font-size: 1.2rem;
+   margin: 1em 0;
 }
-.mobile-show{
-  min-height: 14em;
-  transition: all 2s ease-in-out;
-}
+
 @media screen and (max-width: 600px) {
 .mobileNav-wrapper{
   display: block;
